// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should allow creating a property named "id" [typegoose#476] 1`] = `
Object {
  "__v": 0,
  "_id": Any<ObjectId>,
  "id": 10,
  "normalProp": "hello",
}
`;

exports[`should give a warning when type is "any" [typegoose/typegoose#152] 1`] = `
Array [
  Array [
    "Setting \\"Mixed\\" for property \\"%s.%s\\"
Look here for how to disable this message: https://typegoose.github.io/typegoose/docs/api/decorators/model-options/#allowmixed",
    "TestANY",
    "someANY",
  ],
]
`;

exports[`should support manually overwriting inner \`type\` in Maps 1`] = `
Array [
  Array [
    "Setting \\"Mixed\\" for property \\"%s.%s\\"
Look here for how to disable this message: https://typegoose.github.io/typegoose/docs/api/decorators/model-options/#allowmixed",
    "TestMapsWithManualTypeOverwrite",
    "test",
  ],
]
`;

exports[`should support mapping MIXED options on Maps 1`] = `
Array [
  Array [
    "Setting \\"Mixed\\" for property \\"%s.%s\\"
Look here for how to disable this message: https://typegoose.github.io/typegoose/docs/api/decorators/model-options/#allowmixed",
    "TestMixedOnMaps",
    "test",
  ],
]
`;

exports[`should support mapping custom options on MIXED with Maps 1`] = `
Array [
  Array [
    "Setting \\"Mixed\\" for property \\"%s.%s\\"
Look here for how to disable this message: https://typegoose.github.io/typegoose/docs/api/decorators/model-options/#allowmixed",
    "TestMixedMapsCustomOptions",
    "test",
  ],
]
`;

exports[`should work with Objects in Class [szokodiakos#54] 1`] = `
Array [
  Array [
    "Setting \\"Mixed\\" for property \\"%s.%s\\"
Look here for how to disable this message: https://typegoose.github.io/typegoose/docs/api/decorators/model-options/#allowmixed",
    "TESTObject",
    "test",
  ],
]
`;

exports[`test the Passthrough class (non "direct") should make use of the "Passthrough" class (PropType.ARRAY) 1`] = `
Array [
  Array [
    "Setting \\"Mixed\\" for property \\"%s.%s\\"
Look here for how to disable this message: https://typegoose.github.io/typegoose/docs/api/decorators/model-options/#allowmixed",
    "PassthroughPropTypeARRAY",
    "something",
  ],
]
`;

exports[`test the Passthrough class (non "direct") should make use of the "Passthrough" class (PropType.MAP) 1`] = `
Array [
  Array [
    "Setting \\"Mixed\\" for property \\"%s.%s\\"
Look here for how to disable this message: https://typegoose.github.io/typegoose/docs/api/decorators/model-options/#allowmixed",
    "PassthroughPropTypeMAP",
    "something",
  ],
]
`;

exports[`warnMixed as property option should allow setting "allowMixed" as property option [typegoose/typegoose#620] 1`] = `"Setting \\"Mixed\\" is not allowed! (TestPropertyAllowMixed, someMixed) [E017]"`;
